sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:3: error: not found: value n
  n=getValueCount()
  ^AlgSelectionSort:5: error: not found: value n
  for(i <- 0 to n-2){
                ^