sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  n=getValueCount()
  
  for(i <- 0 to n-2){
    
    var min : Int = getValue(i)
    var minId : Int = i
    
    for(j <- i+1 to n-1){
      var b = getValue(j)
      if(b<min){
        min=b
        minId=j
      }
    }
    swap(i,minId)
  }
}